# rag_scholar

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .pre-commit-config.yaml  CHAT_SYSTEM_ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Download advanced_chatbot.py  RAG_SCHOLAR_ARCHITECTURE.md  README-DOPPLER.md  README.md  SETUP.md  ai_research.txt  app.py  app_new.py  chat_assistant.py  cloudbuild-frontend.yaml  cloudbuild.yaml  config.py  deploy-firestore-rules.sh  deploy.sh  dev.py  docker-compose.yml  document_manager.py  doppler.yaml  firestore.rules  fix_early_adopter.py  law_ai_assistant_advanced.py  main copy 5.py  main.py  memory_manager.py  ngrok.yml.template  package-lock.json  package.json  pyproject.toml  rag_app.py  rag_streamlit.py  requirements.txt  (+5 more)
.github/workflows/: ci.yml
UI/: chat.py  chat_ui.py  sidebar.py  styles.py  ui_helpers.py
classes_context/Business_of_Law/: Introduction to the City -- Introduction to the City (accessible) (1).docx  Understanding clients and undertaking analysis -- Understanding clients and undertaking analysis.docx  giulia.txt
classes_context/PA/: 2. Rights issues accessible.docx  3. Orders following settlement [CIV14ef] -- Orders following settlement (accessible).docx  4. Funds to meet a claim.docx  T1 E03 Mergers - competition issues AV.docx  T1 E04 NSIA 2021 AV.docx  T3 E1 Overview of AA.docx  T3 E2 Buyers protections.docx  T3 E3 Sellers protections.docx  T4_E3 Breach of warranty claims.docx  T5_E4 Completion formalities.docx  WS10 - 2 Distributions AV.docx  (+23 more)
default_context/: 6. Sellers protections.docx  T1 E02 Consents AV.docx  T1 E05 Outline stages Alt Text.docx  T1_E01 Preliminary stages - Accessible.docx  T2 E02 Corporate and commercial DD AV.docx  T2 E03 Data protection on corporate transactions.docx  T2 E4 IP and IT issues AV.docx  T2 E7 Property and Envoironmental issues AV.docx  T2 E8 Competition Law - Introduction for Due diligence AV.docx  T4_E1 Disclosure.docx  T4_E4 Funds to meet a claim.docx  doc1.txt  ~$_E01 Preliminary stages - Accessible.docx
docs/: DEPLOYMENT.md  FUNCTIONALITY_TEST.md  README.md
faiss_Business-of-Law/: index.faiss  index.pkl
faiss_PA/: index.faiss  index.pkl
frontend/: .env.production  .firebaserc  Dockerfile  Dockerfile.build  Dockerfile.dev  capacitor.config.ts  craco.config.js  firebase.json  nginx.conf  package-lock.json  package.json  tailwind.config.js
ios-native/: .gitignore  FEATURES_TO_IMPLEMENT.md  FOLDER_STRUCTURE.md  IMPLEMENTATION_COMPLETE.md  MIGRATION_GUIDE.md  README.md  SETUP.md  XCODE_SETUP.md
rag_files/: doc1.txt
science/: chat_assistant.py  citations.py  config.py  core.py  document_manager.py  greetings.py  loader.py  memory.py  memory_manager.py  vector_store.py
scripts/: README.md  migrate_achievements.py  sync_class_achievements.py
test_docs/: artificial_intelligence_research.txt  sustainable_energy_report.txt
tests/: conftest.py
(+326 files in other folders)
